@@ -143,6 +143,17 @@ PHP 8.5 UPGRADE NOTES
 11. Changes to INI File Handling
 ========================================
 
+- Opcache:
+  . Added opcache.file_cache_read_only to support a read-only
+    opcache.file_cache directory, for use with read-only file systems
+    (e.g. read-only Docker containers).
+    Best used with opcache.validate_timestamps=0,
+    opcache.enable_file_override=1,
+    and opcache.file_cache_consistency_checks=0.
+    Note: A cache generated with a different build of PHP, a different file
+    path, or different settings (including which extensions are loaded), may be
+    ignored.
+
 ========================================
 12. Windows Support
 ========================================
